# grantha

./: .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_MANAGEMENT_SUMMARY.md  README.md  STREAMING_IMPLEMENTATION_SUMMARY.md  TEST_AUTOMATION_SUMMARY.md  alembic.ini  api-health-report.md  api_documentation_analysis.md  api_integration_checklist.md  docker-compose.yml  grantha-openapi-spec.yaml  main.py  package.json  performance_config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  test_api.py  test_streaming.py  validation-report.md
.claude/: agents.json
.claude/agents/: README.md  agent-organizer.md  ai-engineer.md  api-designer.md  api-documenter.md  code-reviewer.md  database-administrator.md  devops-engineer.md  docker-engineer.md  documentation-engineer.md  fullstack-developer.md  llm-architect.md  nodejs-expert.md  product-manager.md  prompt-engineer.md  refactoring-specialist.md  research-analyst.md  security-auditor.md  technical-writer.md  test-automator.md  typescript-pro.md  websocket-engineer.md  workflow-orchestrator.md
.github/workflows/: ci.yml  performance-optimization.yml
alembic/: env.py
alembic/versions/: f21017f067e1_initial_database_schema_with_user_.py
api/: README.md  api.py  bedrock_client.py  config.py  deep_research.py  main.py  openrouter_client.py  prompts.py  wiki_generator.py
docker/: nginx.conf
docs/: API_REFERENCE.md  API_USAGE_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  STREAMING_CHAT_IMPLEMENTATION.md
e2e/: playwright.config.ts
e2e/tests/: chat-workflow.spec.ts  navigation.spec.ts
frontend/: .env.example  .gitignore  LOGIN_SETUP.md  PERFORMANCE.md  README.md  components.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  app.pcss
frontend/src/lib/api/: client.ts  enhanced-client.ts
frontend/src/lib/components/: ThemeToggle.svelte
frontend/src/lib/components/auth/: AuthDialog.svelte  AuthGuard.svelte  ChangePasswordForm.svelte  RegistrationForm.svelte  SessionManager.svelte  UserProfile.svelte
frontend/src/lib/components/chat/: ChatArea.svelte  ChatInput.svelte  ChatSidebar.svelte
frontend/src/lib/components/layout/: AppLayout.svelte  Header.svelte  Sidebar.svelte
frontend/src/lib/components/markdown/: AdvancedMarkdown.svelte
frontend/src/lib/components/projects/: ProcessedProjects.svelte
frontend/src/lib/components/ui/: LazyComponent.svelte  LoadingSpinner.svelte  badge.svelte  button.svelte  card.svelte  dialog.svelte  input.svelte  select.svelte  textarea.svelte  theme-toggle.svelte  toast.svelte
frontend/src/lib/components/wiki/: TreeNode.svelte  WikiTreeView.svelte
frontend/src/lib/stores/: auth.ts  chat.ts  error.ts  models.ts
frontend/src/lib/types/: api.ts  shared.ts
frontend/src/lib/utils/: auth-validation.ts  deepwiki-integration.ts  http-interceptor.ts  index.ts  lazy-loader.ts  uuid.ts  validation.ts
frontend/src/lib/websocket/: client.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/agents/: +page.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/docs/: +page.svelte
frontend/src/routes/login/: +layout.svelte  +page.svelte
frontend/src/routes/projects/: +page.svelte
frontend/src/routes/research/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/simple/: +page.svelte
frontend/src/routes/wiki/: +page.svelte
performance_results/: performance_report_20250826_051029.txt
scripts/: performance_test.sh  run_tests.py
src/: __init__.py
src/grantha/: __init__.py
src/grantha/api/: __init__.py  app.py  auth_routes.py  routes.py  websocket_handler.py
src/grantha/api/middleware/: __init__.py  auth.py  caching.py  logging.py  rate_limiting.py
src/grantha/clients/: __init__.py  bedrock_client.py  dashscope_client.py  openrouter_client.py
src/grantha/core/: __init__.py  config.py  logging_config.py  performance.py
src/grantha/database/: __init__.py  auth_service.py  base.py  connection.py  init_data.py  models.py  services.py
src/grantha/models/: __init__.py  api_models.py
src/grantha/utils/: __init__.py  data_pipeline.py  deep_research.py  embedder.py  jwt_service.py  ollama_patch.py  project_storage.py  prompts.py  rag.py  simple_chat.py  websocket_wiki.py  wiki_generator.py
tests/: README.md  __init__.py  conftest.py  conftest_full.py  test_config.yaml  test_refactoring.py  utils.py
tests/auth/: README.md  conftest.py
tests/auth/frontend/: test_auth_store.py  test_components.py
tests/auth/integration/: test_api_endpoints.py  test_end_to_end_flows.py
tests/auth/performance/: test_performance.py
tests/auth/security/: test_security_features.py
tests/auth/unit/: test_jwt_service.py  test_models.py  test_services.py
tests/e2e/: test_wiki_workflow.py
tests/fixtures/: sample_responses.json
tests/integration/: test_api_endpoints.py  test_comprehensive_api.py  test_e2e_user_workflows.py  test_grantha_api_integration.py  test_websocket.py  test_websocket_integration.py
tests/performance/: test_load_performance.py
tests/unit/: test_basic_functionality.py  test_config.py  test_openai_client.py  test_wiki_generator.py
